ci: Fix unexpected split

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,76 +1,4 @@
-s
-r
-c
-/
-*
-*
-/
-*
-.
-j
-s
- 
-l
-i
-n
-g
-u
-i
-s
-t
--
-g
-e
-n
-e
-r
-a
-t
-e
-d
-=
-f
-a
-l
-s
-e
-s
-r
-c
-/
-*
-*
-/
-*
-.
-c
-s
-s
- 
-l
-i
-n
-g
-u
-i
-s
-t
--
-g
-e
-n
-e
-r
-a
-t
-e
-d
-=
-f
-a
-l
-s
-e
+src/**/*.js linguist-generated=falsesrc/**/*.css linguist-generated=false
 
 /home/runner/work/_temp/348da731-a764-4765-a89d-5e9677aa3737/polyfillGeneratedCode.js  linguist-generated=true # From generatePolyfill
 
