--- a/.github/workflows/postCommit.yml
+++ b/.github/workflows/postCommit.yml
@@ -11,6 +11,9 @@ on:
 
 concurrency: postCommit
 
+env:
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   postCommit:
     runs-on: ubuntu-latest
@@ -22,8 +25,8 @@ jobs:
           node-version: lts/*
           check-latest: true
           cache: npm
-      - uses: technote-space/get-diff-action@v6
-        name: List diff
+      - name: Prepare git
+        run: node scripts/postCommit/prepareGit.js
       - name: Install dependencies
         run: npm ci
       - name: Auto browserify generator
@@ -34,22 +37,11 @@ jobs:
         uses: crazy-max/ghaction-github-runtime@v2
       - name: Gadget-polyfill generator
         run: node scripts/generatePolyfill/index.js
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Gadgets-definition Generator
         run: node scripts/gadgetsDefinitionGenerator/index.js
       - name: Conventional Commits scopes generator
         run: node scripts/conventionalCommitsScopesGenerator/index.js
       - name: linguist-generated to .gitattributes
         run: node scripts/postCommit/linguist-generated.js
-      - uses: EndBug/add-and-commit@v9
-        with:
-          committer_name: GitHub Actions
-          committer_email: actions@github.com
-          default_author: github_actor
-          message: "auto: post Commit CI - commit from GitHub Actions"
-          push: false
       - name: Show git status & push
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: node scripts/postCommit/push.js
