--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
         "postcss-font-variant": "^5.0.0",
         "postcss-selector-matches": "^4.0.0",
         "postcss-selector-not": "^7.0.1",
-        "strip-json-comments": "^5.0.0",
+        "simple-git": "^3.16.1",
         "stylelint": "^15.2.0",
         "stylelint-config-standard": "^30.0.1",
         "typescript": "^4.9.3",
