--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "postcss-font-variant": "^5.0.0",
         "postcss-selector-matches": "^4.0.0",
         "postcss-selector-not": "^7.0.1",
+        "semver": "^7.3.8",
         "simple-git": "^3.16.1",
         "stylelint": "^15.2.0",
         "stylelint-config-standard": "^30.0.1",
