--- a/.github/workflows/postCommit.yml
+++ b/.github/workflows/postCommit.yml
@@ -14,6 +14,21 @@ concurrency: postCommit
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+permissions:
+  actions: write
+  checks: read
+  contents: write
+  deployments: read
+  id-token: read
+  issues: write
+  discussions: read
+  packages: read
+  pages: read
+  pull-requests: read
+  repository-projects: read
+  security-events: read
+  statuses: read
+
 jobs:
   postCommit:
     runs-on: ubuntu-latest
