--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "stylelint-config-standard": "^30.0.1",
         "typescript": "^4.9.3",
         "uglify-js": "^3.17.4",
-        "unassertify": "^3.0.1"
+        "unassertify": "^3.0.1",
+        "yaml": "^2.2.1"
     }
 }
