--- a/.github/workflows/Linter test.yml
+++ b/.github/workflows/Linter test.yml
@@ -38,8 +38,6 @@ jobs:
           key: cache
       - uses: technote-space/get-diff-action@v6
         name: List diff
-      - name: Print env
-        run: node scripts/test/test.js
       - name: Check eslint environment
         run: npx eslint --env-info && echo ---- && mkdir -p .cache && echo ---- && ls -lhA .cache && echo ---- && ls -lhA $RUNNER_TEMP
       - name: Run eslint
@@ -48,6 +46,8 @@ jobs:
         run: npx stylelint --max-warnings 0 --cache --cache-strategy content --cache-location ".cache/" "src/**/*.css"
       - name: Run v8r
         run: npx -y v8r@latest src/**/definition.json --schema .vscode/json-schemas/gadget-definition.json
+      - name: Check .mailmap
+        run: node scripts/mailmapChecker/index.js
       - name: Trigger post commit CI
         if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         uses: actions/github-script@v6
