--- a/.github/workflows/postCommit.yml
+++ b/.github/workflows/postCommit.yml
@@ -11,7 +11,9 @@ on:
   schedule:
     - cron: 15 0 * * *
 
-concurrency: postCommit
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
