--- a/.github/workflows/postCommit.yml
+++ b/.github/workflows/postCommit.yml
@@ -12,7 +12,7 @@ on:
     - cron: 15 0 * * *
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
+  group: ${{ github.workflow }}-${{ env.GITHUB_WORKFLOW_REF }}
   cancel-in-progress: true
 
 env:
