--- a/scripts/.eslintrc
+++ b/scripts/.eslintrc
@@ -2,5 +2,11 @@
     "env": {
         "node": true,
         "browser": false
-    }
+    },
+    "parserOptions": {
+        "sourceType": "module"
+    },
+    "ignorePatterns": [
+        "generatePolyfill/template.js"
+    ]
 }
