--- a/.github/workflows/postCommit.yml
+++ b/.github/workflows/postCommit.yml
@@ -37,6 +37,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
@@ -45,8 +47,6 @@ jobs:
           cache: npm
       - name: "Prepare: Install dependencies"
         run: npm ci
-      - name: "Prepare: Prepare git"
-        run: node scripts/postCommit/prepareGit.js
       - name: "Prepare: Expose GitHub Runtime"
         uses: crazy-max/ghaction-github-runtime@v2
       - name: Auto browserify generator
