--- a/.github/workflows/postCommit.yml
+++ b/.github/workflows/postCommit.yml
@@ -47,6 +47,8 @@ jobs:
           cache: npm
       - name: "Prepare: Install dependencies"
         run: npm ci
+      - name: "Prepare: Git config"
+        run: node scripts/postCommit/prepareGit.js
       - name: "Prepare: Expose GitHub Runtime"
         uses: crazy-max/ghaction-github-runtime@v2
       - name: Auto browserify generator
