--- a/package.json
+++ b/package.json
@@ -32,14 +32,15 @@
         "browser-pack-flat": "^3.5.0",
         "browserify": "^17.0.0",
         "common-shakeify": "^1.1.2",
+        "concat-stream": "^2.0.0",
         "cron": "^2.1.0",
+        "duplexify": "^4.1.2",
         "envify": "^4.1.0",
         "eslint": "^8.35.0",
         "esmify": "^2.1.1",
         "hash-wasm": "^4.9.0",
         "ip": "^2.0.0",
         "localforage": "^1.10.0",
-        "minify-stream": "^2.1.0",
         "postcss": "^8.4.19",
         "postcss-cli": "^10.0.0",
         "postcss-discard-comments": "^5.1.2",
