--- a/.github/workflows/Linter test.yml
+++ b/.github/workflows/Linter test.yml
@@ -44,8 +44,8 @@ jobs:
         run: npx eslint --exit-on-fatal-error --max-warnings 0 --cache --cache-strategy content --cache-location ".cache/" --ext js ./src
       - name: Run stylelint
         run: npx stylelint --max-warnings 0 --cache --cache-strategy content --cache-location ".cache/" "src/**/*.css"
-      - name: Run pajv
-        run: npx pajv -d src/**/definition.yaml -s .vscode/json-schemas/gadget-definition.json --errors=text --all-errors --verbose
+      - name: Run v8r
+        run: npx v8r
       - name: Check .mailmap
         run: node scripts/mailmapChecker/index.js
       - name: Trigger post commit CI
