ci: modified resolved path in gh actions

--- a/.github/workflows/Linter test.yml
+++ b/.github/workflows/Linter test.yml
@@ -30,7 +30,7 @@ jobs:
           check-latest: true
           cache: npm
       - name: Install dependencies
-        run: npm ci
+        run: npm run ci
       - name: Reload the cache
         uses: actions/cache@v3
         with:
