--- a/.github/workflows/postCommit.yml
+++ b/.github/workflows/postCommit.yml
@@ -44,7 +44,7 @@ jobs:
           check-latest: true
           cache: npm
       - name: "Prepare: Install dependencies"
-        run: npm ci
+        run: npm run ci
       - name: "Prepare: Git config"
         run: node scripts/postCommit/prepareGit.js
       - name: "Prepare: Expose GitHub Runtime"
