--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     },
     "scripts": {
         "test": "eslint src && stylelint src/**/*.css && v8r && node scripts/mailmapChecker/index.js",
-        "format": "eslint src --fix && stylelint src/**/*.css --fix"
+        "format": "eslint src --fix && stylelint src/**/*.css --fix",
+        "ci": "node scripts/ci/before.js && npm ci && node scripts/ci/after.js"
     },
     "dependencies": {
         "@actions/artifact": "^1.1.1",
