fix(Gadget-hideAutopromoteLog): Make hidden only in log page

--- a/src/gadgets/hideAutopromoteLog/definition.yaml
+++ b/src/gadgets/hideAutopromoteLog/definition.yaml
@@ -24,5 +24,4 @@ dependencies: []
 
 _section: browsing
 
-_files:
-  - MediaWiki:hideAutoPromoteLog.css
+_files: [MediaWiki:hideAutoPromoteLog.css]
