--- a/.github/workflows/postCommit.yml
+++ b/.github/workflows/postCommit.yml
@@ -5,8 +5,13 @@ on:
     paths:
       - scripts/**/*.js
       - "!scripts/test/*.js"
-      - "!scripts/mailmapChecker/*.js"
+      - src/**/*.js
+      - src/**/*.css
+      - src/**/definition.yaml
+      - src/gadgets/Gadgets-definition-list.yaml
       - .github/workflows/postCommit.yml
+      - .github/workflows/Linter test.yml
+      - package-lock.json
   workflow_dispatch:
   schedule:
     - cron: 15 0 * * *
