--- a/.github/workflows/postCommit.yml
+++ b/.github/workflows/postCommit.yml
@@ -53,6 +53,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 2
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
