--- a/.github/workflows/postCommit.yml
+++ b/.github/workflows/postCommit.yml
@@ -66,7 +66,7 @@ jobs:
         run: node scripts/gadgetsDefinitionGenerator/index.js
       - name: Conventional Commits scopes generator
         run: node scripts/conventionalCommitsScopesGenerator/index.js
-      - name: linguist-generated to .gitattributes
+      - name: linguist-generated
         run: node scripts/postCommit/linguist-generated.js
       - name: Show git status & push
         run: node scripts/postCommit/push.js
