ci: fix workflow syntax error

--- a/.github/workflows/Linter test.yml
+++ b/.github/workflows/Linter test.yml
@@ -2,10 +2,11 @@ name: Linter test
 
 on:
   workflow_dispatch:
-    commits:
-      description: "commits json, only for postCommit"
-      required: false
-      type: string
+    inputs:
+      commits:
+        description: "commits json, only for postCommit"
+        required: false
+        type: string
 
 jobs:
   test:
