ci: same format as require

--- a/.github/workflows/postCommit.yml
+++ b/.github/workflows/postCommit.yml
@@ -72,7 +72,7 @@ jobs:
       - name: Show git status & push
         run: node scripts/postCommit/push.js
       - name: Run linter test
-        uses: .github/workflows/Linter test.yml
+        uses: ./.github/workflows/Linter test.yml
         with:
           commits: ${{ env.commits }}
         if: ${{ env.linterTest == "true" }}
