--- a/.github/workflows/postCommit.yml
+++ b/.github/workflows/postCommit.yml
@@ -75,4 +75,4 @@ jobs:
         uses: ./.github/workflows/Linter test.yml
         with:
           commits: ${{ env.commits }}
-        if: ${{ env.linterTest == "true" }}
+        if: ${{ env.linterTest == 'true' }}
