feat(Gadget-libOOUIDialog): Depends on all the oojs-ui

--- a/src/gadgets/libOOUIDialog/definition.yaml
+++ b/src/gadgets/libOOUIDialog/definition.yaml
@@ -23,9 +23,28 @@ peers: []
 
 dependencies:
   - oojs-ui
+  - oojs-ui-core
+  - oojs-ui-core.styles
   - oojs-ui-widgets
+  - oojs-ui-toolbars
+  - oojs-ui-windows
   - oojs-ui.styles.indicators
+  - oojs-ui.styles.textures
+  - oojs-ui.styles.icons-accessibility
   - oojs-ui.styles.icons-alerts
+  - oojs-ui.styles.icons-content
+  - oojs-ui.styles.icons-editing-advanced
+  - oojs-ui.styles.icons-editing-core
+  - oojs-ui.styles.icons-editing-list
+  - oojs-ui.styles.icons-editing-styling
+  - oojs-ui.styles.icons-interactions
+  - oojs-ui.styles.icons-layout
+  - oojs-ui.styles.icons-location
+  - oojs-ui.styles.icons-media
+  - oojs-ui.styles.icons-moderation
+  - oojs-ui.styles.icons-movement
+  - oojs-ui.styles.icons-user
+  - oojs-ui.styles.icons-wikimedia
   - ext.gadget.libPolyfill
 
 _sites:
