--- a/.github/workflows/Linter test.yml
+++ b/.github/workflows/Linter test.yml
@@ -2,12 +2,6 @@ name: Linter test
 
 on:
   workflow_dispatch:
-  workflow_call:
-    inputs:
-      commits:
-        description: "commits json, only for postCommit"
-        required: false
-        type: string
 
 jobs:
   test:
@@ -22,20 +16,5 @@ jobs:
           cache: npm
       - name: Install dependencies
         run: npm run ci
-      - name: Reload the cache
-        uses: actions/cache@v3
-        with:
-          path: .cache
-          key: cache@${{ github.ref }}
-      - uses: technote-space/get-diff-action@v6
-        name: List diff
-      - name: Check eslint environment
-        run: npx eslint --env-info && echo ---- && mkdir -p .cache && echo ---- && ls -lhA .cache && echo ---- && ls -lhA $RUNNER_TEMP
-      - name: Run eslint
-        run: npx eslint --exit-on-fatal-error --max-warnings 0 --cache --cache-strategy content --cache-location ".cache/" --ext js ./src
-      - name: Run stylelint
-        run: npx stylelint --max-warnings 0 --cache --cache-strategy content --cache-location ".cache/" "src/**/*.css"
-      - name: Run v8r
-        run: npx v8r
-      - name: Check .mailmap
-        run: node scripts/emailmapChecker/index.js
+      - name: Run linter test
+        uses: ./.github/linter test
