ci: Generate user right schema

--- a/.github/workflows/generateConfiguration.yml
+++ b/.github/workflows/generateConfiguration.yml
@@ -1,4 +1,4 @@
-name: Generate unrecognizable features
+name: Generate configuration
 
 on:
   workflow_dispatch:
@@ -11,7 +11,7 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
-  generateUnrecognizableFeatures:
+  generateConfiguration:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -29,5 +29,7 @@ jobs:
         uses: crazy-max/ghaction-github-runtime@v2
       - name: Generate unrecognizable features
         run: node scripts/generateUnrecognizableFeatures/index.js
+      - name: Generate user rights schema
+        run: node scripts/generateUserRightsSchema/index.js
       - name: Show git status & push
-        run: node scripts/postCommit/push.js
+        run: node scripts/postCommit/preparePush.js && node scripts/postCommit/push.js
