--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -95,6 +95,7 @@
         "Gadget-queryContributions",
         "Gadget-queryWhatlinkshere",
         "Gadget-quickMoveThread",
+        "Gadget-quickSave",
         "Gadget-ReferenceTooltips",
         "Gadget-registerToDelete",
         "Gadget-report",
