ci: Introduce codeQL

--- a/.github/linter test/action.yaml
+++ b/.github/linter test/action.yaml
@@ -34,3 +34,11 @@ runs:
     - name: Check .mailmap
       run: node scripts/emailmapChecker/index.js
       shell: bash
+    - name: Initialize CodeQL
+      uses: github/codeql-action/init@v2
+      with:
+        languages: javascript
+    - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v2
+      with:
+        config-file: ./.github/codeql-config.yml
