--- a/.github/linter test/action.yaml
+++ b/.github/linter test/action.yaml
@@ -39,5 +39,8 @@ runs:
       with:
         languages: javascript
         config-file: ./.github/codeql-config.yml
+    - name: Check ref and sha
+      run: echo "Github context:" && echo "    ref: ${{ github.ref }}" && echo "    sha: ${{ github.sha }}" && echo "env:" && echo "   ref: $GITHUB_REF" && echo "   sha: $GITHUB_SHA"
+      shell: bash
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
