--- a/.github/linter test/action.yaml
+++ b/.github/linter test/action.yaml
@@ -40,7 +40,7 @@ runs:
         languages: javascript
         config-file: ./.github/codeql-config.yml
     - name: Check ref and sha
-      run: 'echo "Github context:" && echo "    ref: ${{ github.ref }}" && echo "    sha: ${{ github.sha }}" && echo "env:" && echo "    ref: $GITHUB_REF" && echo "    sha: $GITHUB_SHA"'
+      run: 'echo "Github context:" && echo "    ref: ${{ github.ref }}" && echo "    sha: ${{ github.sha }}" && echo "env:" && echo "    ref: $GITHUB_REF" && echo "    sha: $GITHUB_SHA" && echo "git log -1:" && git log -1'
       shell: bash
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
