--- a/.github/workflows/postCommit.yml
+++ b/.github/workflows/postCommit.yml
@@ -72,12 +72,8 @@ jobs:
         run: node scripts/conventionalCommitsScopesGenerator/index.js
       - name: linguist-generated
         run: node scripts/postCommit/linguist-generated.js
-      - name: Show git status
-        run: node scripts/postCommit/preparePush.js
+      - name: Show git status & push
+        run: node scripts/postCommit/push.js
       - name: Run linter test # Name MUST NOT be changed.
         uses: ./.github/linter test
-        with:
-          commits: ${{ env.commits }}
         if: ${{ env.linterTest == 'true' }}
-      - name: push
-        run: node scripts/postCommit/push.js
