--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
         "@csstools/postcss-is-pseudo-class": "^3.1.0",
         "@financial-times/js-features-analyser": "^0.4.3",
         "@octokit/auth-action": "^2.0.3",
+        "@octokit/auth-app": "^4.0.9",
         "@octokit/auth-unauthenticated": "^3.0.4",
+        "@octokit/graphql": "^5.0.5",
         "@octokit/plugin-retry": "^4.1.3",
         "@octokit/rest": "^19.0.7",
         "@types/cron": "^2.0.1",
