--- a/.github/workflows/postCommit.yml
+++ b/.github/workflows/postCommit.yml
@@ -83,6 +83,8 @@ jobs:
         run: node scripts/gadgetsDefinitionGenerator/index.js
       - name: Conventional Commits scopes generator
         run: node scripts/conventionalCommitsScopesGenerator/index.js
+      - name: Commits History generator
+        run: node scripts/ganerateCommitsHistory/index.js
       - name: linguist-generated
         run: node scripts/postCommit/linguist-generated.js
       - name: Show git status & push
