--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@octokit/plugin-retry": "^4.1.3",
         "@octokit/rest": "^19.0.7",
         "@types/cron": "^2.0.1",
+        "@types/echarts": "^4.9.16",
         "@types/jquery": "^3.5.14",
         "@types/moment": "^2.13.0",
         "@types/oojs-ui": "^0.46.1",
