--- a/src/gadgets/queryContributions/definition.yaml
+++ b/src/gadgets/queryContributions/definition.yaml
@@ -27,7 +27,7 @@ dependencies:
   - mediawiki.user
   - jquery.tablesorter
   - ext.gadget.libPolyfill
-  - ext.gadget.echarts5
+  - ext.gadget.echarts
 
 _sites:
   - zh
