--- a/.github/workflows/Linter test.yml
+++ b/.github/workflows/Linter test.yml
@@ -23,6 +23,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      # 与 postCommit 保持同步
       - uses: actions/checkout@v3
       - name: Use Node.js
         uses: actions/setup-node@v3
@@ -32,5 +33,25 @@ jobs:
           cache: npm
       - name: Install dependencies
         run: npm run ci
-      - name: Run linter test
-        uses: ./.github/linter test
+      - name: Reload the cache
+        uses: actions/cache@v3
+        with:
+          path: .cache
+          key: cache@${{ github.ref }}
+      - name: Check eslint environment
+        run: npx eslint --env-info && mkdir -p .cache && echo ---- && ls -lhA .cache
+      - name: Run eslint
+        run: npx eslint --exit-on-fatal-error --max-warnings 0 --cache --cache-strategy content --cache-location ".cache/" --ext js ./src
+      - name: Run stylelint
+        run: npx stylelint --max-warnings 0 --cache --cache-strategy content --cache-location ".cache/" "src/**/*.css"
+      - name: Run v8r
+        run: echo "::group::v8r output" && npx v8r && echo "::endgroup::"
+      - name: Check .mailmap
+        run: node scripts/emailmapChecker/index.js
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v2
+        with:
+          languages: javascript
+          config-file: ./.github/codeql-config.yml
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v2
