--- a/.github/workflows/Linter test.yml
+++ b/.github/workflows/Linter test.yml
@@ -46,8 +46,9 @@ jobs:
         run: npx stylelint --max-warnings 0 --cache --cache-strategy content --cache-location ".cache/" "src/**/*.css"
       - name: Run v8r
         run: echo "::group::v8r output" && npx v8r && echo "::endgroup::"
-      - name: Check .mailmap
-        run: node scripts/emailmapChecker/index.js
+      # 由于仅手动发起，故无需检查
+      # - name: Check .mailmap
+      #   run: node scripts/emailmapChecker/index.js
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
         with:
