--- a/.github/workflows/postCommit.yml
+++ b/.github/workflows/postCommit.yml
@@ -88,11 +88,17 @@ jobs:
       - name: linguist-generated
         run: node scripts/postCommit/linguist-generated.js
       - name: Show git status & push
+        id: output
         run: node scripts/postCommit/push.js
+    outputs:
+      commits: ${{ steps.output.outputs.commits }}
+      linterTest: ${{ steps.output.outputs.linterTest }}
   linter_test:
     runs-on: ubuntu-latest
     needs: postCommit
-    if: env.linterTest == 'true'
+    if: needs.postCommit.outputs.linterTest == 'true'
+    env:
+      commits: ${{ needs.postCommit.outputs.commits }}
     steps:
       # 与 linter test 保持同步
       - uses: actions/checkout@v3
@@ -117,6 +123,7 @@ jobs:
         run: npx stylelint --max-warnings 0 --cache --cache-strategy content --cache-location ".cache/" "src/**/*.css"
       - name: Run v8r
         run: echo "::group::v8r output" && npx v8r && echo "::endgroup::"
+      # 由于可能非手动发起，故需检查
       - name: Check .mailmap
         run: node scripts/emailmapChecker/index.js
       - name: Initialize CodeQL
