ci: use bigger runner for CodeQL

--- a/.github/workflows/Linter test.yml
+++ b/.github/workflows/Linter test.yml
@@ -20,7 +20,7 @@ permissions:
   statuses: read
 
 jobs:
-  test:
+  linter_test:
     runs-on: ubuntu-latest
     steps:
       # 与 postCommit 保持同步
@@ -49,6 +49,10 @@ jobs:
       # 由于仅手动发起，故无需检查
       # - name: Check .mailmap
       #   run: node scripts/emailmapChecker/index.js
+  CodeQL:
+    runs-on: macos-latest
+    needs: linter_test
+    steps:
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
         with:
