--- a/.github/workflows/postCommit.yml
+++ b/.github/workflows/postCommit.yml
@@ -126,6 +126,11 @@ jobs:
       # 由于可能非手动发起，故需检查
       - name: Check .mailmap
         run: node scripts/emailmapChecker/index.js
+  CodeQL:
+    runs-on: macos-latest
+    needs: linter_test
+    steps:
+      - uses: actions/checkout@v3
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
         with:
