--- a/src/gadgets/Wikiplus/definition.yaml
+++ b/src/gadgets/Wikiplus/definition.yaml
@@ -30,6 +30,6 @@ _sites:
 _section: editing
 
 _files:
-  - MediaWiki:Gadget-Wikiplus-button.js
   - MediaWiki:Gadget-Wikiplus.css
   - MediaWiki:Gadget-Wikiplus.js
+  - MediaWiki:Gadget-Wikiplus-activation.js
