--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@actions/artifact": "^1.1.1",
         "@actions/core": "^1.10.0",
         "@csstools/postcss-is-pseudo-class": "^3.1.0",
+        "@csstools/postcss-media-minmax": "^1.0.0",
         "@financial-times/js-features-analyser": "^0.4.3",
         "@octokit/auth-action": "^2.0.3",
         "@octokit/auth-unauthenticated": "^3.0.4",
