--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,7 @@
         "Gadget-edit",
         "Gadget-editCount",
         "Gadget-editTopSection",
+        "Gadget-editdraft",
         "Gadget-enable-nest-highlight",
         "Gadget-extiw",
         "Gadget-flagBlocked",
