--- a/.github/workflows/generateConfiguration.yml
+++ b/.github/workflows/generateConfiguration.yml
@@ -23,6 +23,11 @@ jobs:
           cache: npm
       - name: Install dependencies
         run: npm run ci
+      - name: Reload the cache
+        uses: actions/cache@v3
+        with:
+          path: .cache
+          key: cache@${{ github.ref }}
       - name: Prepare git
         run: node scripts/postCommit/prepareGit.js
       - name: Expose GitHub Runtime
