ci: fetch npm version

--- a/.github/workflows/generateConfiguration.yml
+++ b/.github/workflows/generateConfiguration.yml
@@ -22,16 +22,21 @@ jobs:
           node-version: lts/*
           check-latest: true
           cache: npm
+      - name: Get npm version
+        id: npm-version
+        shell: bash
+        run: echo "version=$(npm -v | grep -oP '^\d+')" >> ${GITHUB_OUTPUT}
       - uses: actions/cache/restore@v3
         name: Try to restore node_modules from cache
         id: cache
         with:
           path: node_modules
-          key: nodejs-${{ steps.setup-node.outputs.node-version }}_npm-${{ steps.setup-node.outputs.npm-version }}_package-lock-${{ hashFiles('package-lock.json') }}
+          key: nodejs@${{ steps.setup-node.outputs.node-version }}_npm@${{ steps.npm-version.outputs.version }}_package-lock@${{ hashFiles('package-lock.json') }}
       - name: Install dependencies if no cache for node_modules
         run: npm run ci
         if: steps.cache.outputs.cache-hit != 'true'
       - uses: actions/cache/save@v3
+        if: steps.cache.outputs.cache-hit != 'true'
         name: Save node_modules to cache
         with:
           path: node_modules
