ci: unify the naming

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -102,6 +102,7 @@
         "Gadget-rollback-summary",
         "Gadget-Searchbox-integration",
         "Gadget-Searchbox-popout",
+        "Gadget-SendWelcomeMessage",
         "Gadget-shortlink",
         "Gadget-ShowAvatar",
         "Gadget-SideBarPic",
