--- a/tsconfig.production.json
+++ b/tsconfig.production.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "allowJs": true,
         "removeComments": true,
-        "target": "ESNext",
+        "target": "ES3",
         "outDir": "dist/",
         "alwaysStrict": true,
         "strict": true,
@@ -10,7 +10,8 @@
         "lib": [
             "ESNext",
             "DOM"
-        ]
+        ],
+        "ignoreDeprecations": "5.0"
     },
     "include": [
         "src",
