--- a/.github/codeql-config.yml
+++ b/.github/codeql-config.yml
@@ -1,1 +1,5 @@
 name: "MoegirlPedia Interface Code CodeQL config"
+
+packs:
+  - codeql/javascript-experimental-atm-queries
+  - codeql/javascript-queries
